--- a/index.css
+++ b/index.css
@@ -11,7 +11,12 @@
   list-style: none;
   scroll-behavior: smooth;
   font-family: "Rubik", sans-serif;
+  
+
+
 }
+/* background-color: rgb(8, 8, 21); */
+
 body {
   height: 200vh;
   background-color: rgb(8, 8, 21);
@@ -25,7 +30,7 @@ header img{
   display: none;
 }
 header {
-  background-color: rgb(8, 8, 21);
+  background-color: transparent;
   display: flex;
   justify-content: space-between;
   position: fixed;
@@ -91,7 +96,7 @@ span {
   width: 100%;
   display: flex;
   justify-content: center;
-  background-color: rgb(8, 8, 21);
+  background-color: transparent;
   align-items: center;
   padding: 1rem 12%;
   height: 600px;
@@ -158,13 +163,13 @@ span {
 .section-3 {
   width: 100%;
 
-  background-color: #3d394d;
+  background-color: transparent;
   color: #cdcfcb;
 }
 .about {
   display: flex;
   justify-content: center;
-  background-color: rgb(8, 8, 21);
+  background-color: transparent;
   height: 400px;
 }
 
@@ -188,7 +193,7 @@ span {
 }
 
 .footer {
-  background-color: rgb(19, 19, 33);
+  background-color: rgb(36, 36, 43);
   width: 100%;
   height: 200px;
   display: flex;
@@ -411,7 +416,7 @@ span {
     top: 50px;
     display: flex;
     flex-direction: column;
-    background-color: rgb(8, 8, 21);
+    background-color:transparent;
     height: 100vh;
     width: 80%;
     text-align: center;
